# ai-newser

./: README.md  ai_newser.session  news_analysis_results_20250213-152725.xlsx  pyproject.toml
src/ai_newser/: __main__.py
