[project]
name = "ai-newser"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "xndrpr",email = "velaton618@gmail.com"},
]
dependencies = ["g4f[all]>=0.4.6.1", "requests>=2.32.3", "tabulate>=0.9.0", "pandas>=2.2.3", "telethon>=1.38.1", "python-dotenv>=1.0.1", "python-telegram-bot>=21.10"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
